Adding quick effects smoke with python raises segmentation fault #98427

Closed
opened 2022-05-27 10:24:32 +02:00 by jkjkjk · 15 comments

System Information
Operating system: Linux-5.15.33-1-lts-x86_64-with-glibc2.35 64 Bits
Graphics card: Mesa Intel(R) HD Graphics 3000 (SNB GT2) Intel 3.3 (Core Profile) Mesa 22.0.1

Blender Version
Broken: version: 3.1.2, branch: makepkg (modified), commit date: 2022-03-31 17:40, hash: cc66d1020c
Worked: (newest version of Blender that worked as expected)

Short description of error
Adding quick physics with python raises segmentation fault

Exact steps for others to reproduce the error

#foo.py
import bpy

CUBE = bpy.data.objects["Cube"]
CUBE.select_set(True)
bpy.ops.object.quick_smoke()

blender --background --factory-startup -P foo.py

Blender 3.1.2 (hash cc66d1020c3b built 2022-04-02 14:45:23)
Writing: /tmp/blender.crash.txt
segmentation fault (core dumped)

cat blender.crash.txt

# backtrace
blender(BLI_system_backtrace+0x38) [0x55eff4fbc9c8]
blender(+0xf6839e) [0x55eff425d39e]
/usr/lib/libc.so.6(+0x42560) [0x7fa2bd6bc560]
/usr/lib/libpython3.10.so.1.0(_PyDict_GetItemIdWithError+0x66) [0x7fa2bfd968c6]
/usr/lib/libpython3.10.so.1.0(+0x1f5fa3) [0x7fa2bfe5efa3]
/usr/lib/libpython3.10.so.1.0(PyEval_EvalCode+0x42) [0x7fa2bfe5ef12]
/usr/lib/libpython3.10.so.1.0(+0x205df4) [0x7fa2bfe6edf4]
/usr/lib/libpython3.10.so.1.0(+0x2017bb) [0x7fa2bfe6a7bb]
/usr/lib/libpython3.10.so.1.0(PyRun_StringFlags+0x81) [0x7fa2bfe62591]
blender(_ZN5MANTA15runPythonStringESt6vectorINSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEESaIS6_EE+0xc1) [0x55eff67f6da1]
blender(_ZN5MANTAD1Ev+0xef) [0x55eff680faaf]
blender(_ZN5MANTAD0Ev+0x9) [0x55eff680fcb9]
blender(+0x10ebc73) [0x55eff43e0c73]
blender(+0x130cc52) [0x55eff4601c52]
blender(BKE_modifier_free_ex+0x62) [0x55eff42bb542]
blender(BKE_object_free_modifiers+0x1f) [0x55eff506941f]
blender(+0x1d7449b) [0x55eff506949b]
blender(_ZN7blender3deg32deg_free_copy_on_write_datablockEP2ID+0xc1) [0x55eff53bea01]
blender(_ZN7blender3deg6IDNode7destroyEv+0xae) [0x55eff53c937e]
blender(_ZN7blender3deg9Depsgraph14clear_id_nodesEv+0xbb) [0x55eff53a351b]
blender(_ZN7blender3deg9DepsgraphD1Ev+0x9) [0x55eff53a35e9]
blender(DEG_graph_free+0x16) [0x55eff53a38d6]
blender(+0x1c59b17) [0x55eff4f4eb17]
blender(BLI_ghash_free+0x75) [0x55eff4f54475]
blender(+0x10239fc) [0x55eff43189fc]
blender(BKE_id_free_ex+0xe2) [0x55eff429e3a2]
blender(BKE_main_free+0xa6) [0x55eff42ad9f6]
blender(BKE_blender_free+0x72) [0x55eff425f5e2]
blender(WM_exit_ex+0x498) [0x55eff44204c8]
blender(WM_exit+0x15) [0x55eff44209e5]
blender(main+0x35d) [0x55eff4223a8d]
/usr/lib/libc.so.6(+0x2d310) [0x7fa2bd6a7310]
/usr/lib/libc.so.6(__libc_start_main+0x81) [0x7fa2bd6a73c1]
blender(_start+0x25) [0x55eff424f4a5]

# Python backtrace

**System Information** Operating system: Linux-5.15.33-1-lts-x86_64-with-glibc2.35 64 Bits Graphics card: Mesa Intel(R) HD Graphics 3000 (SNB GT2) Intel 3.3 (Core Profile) Mesa 22.0.1 **Blender Version** Broken: version: 3.1.2, branch: makepkg (modified), commit date: 2022-03-31 17:40, hash: `cc66d1020c` Worked: (newest version of Blender that worked as expected) **Short description of error** Adding quick physics with python raises segmentation fault **Exact steps for others to reproduce the error** ``` #foo.py import bpy CUBE = bpy.data.objects["Cube"] CUBE.select_set(True) bpy.ops.object.quick_smoke() ``` `blender --background --factory-startup -P foo.py` ``` Blender 3.1.2 (hash cc66d1020c3b built 2022-04-02 14:45:23) Writing: /tmp/blender.crash.txt segmentation fault (core dumped) ``` `cat blender.crash.txt` ``` # backtrace blender(BLI_system_backtrace+0x38) [0x55eff4fbc9c8] blender(+0xf6839e) [0x55eff425d39e] /usr/lib/libc.so.6(+0x42560) [0x7fa2bd6bc560] /usr/lib/libpython3.10.so.1.0(_PyDict_GetItemIdWithError+0x66) [0x7fa2bfd968c6] /usr/lib/libpython3.10.so.1.0(+0x1f5fa3) [0x7fa2bfe5efa3] /usr/lib/libpython3.10.so.1.0(PyEval_EvalCode+0x42) [0x7fa2bfe5ef12] /usr/lib/libpython3.10.so.1.0(+0x205df4) [0x7fa2bfe6edf4] /usr/lib/libpython3.10.so.1.0(+0x2017bb) [0x7fa2bfe6a7bb] /usr/lib/libpython3.10.so.1.0(PyRun_StringFlags+0x81) [0x7fa2bfe62591] blender(_ZN5MANTA15runPythonStringESt6vectorINSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEESaIS6_EE+0xc1) [0x55eff67f6da1] blender(_ZN5MANTAD1Ev+0xef) [0x55eff680faaf] blender(_ZN5MANTAD0Ev+0x9) [0x55eff680fcb9] blender(+0x10ebc73) [0x55eff43e0c73] blender(+0x130cc52) [0x55eff4601c52] blender(BKE_modifier_free_ex+0x62) [0x55eff42bb542] blender(BKE_object_free_modifiers+0x1f) [0x55eff506941f] blender(+0x1d7449b) [0x55eff506949b] blender(_ZN7blender3deg32deg_free_copy_on_write_datablockEP2ID+0xc1) [0x55eff53bea01] blender(_ZN7blender3deg6IDNode7destroyEv+0xae) [0x55eff53c937e] blender(_ZN7blender3deg9Depsgraph14clear_id_nodesEv+0xbb) [0x55eff53a351b] blender(_ZN7blender3deg9DepsgraphD1Ev+0x9) [0x55eff53a35e9] blender(DEG_graph_free+0x16) [0x55eff53a38d6] blender(+0x1c59b17) [0x55eff4f4eb17] blender(BLI_ghash_free+0x75) [0x55eff4f54475] blender(+0x10239fc) [0x55eff43189fc] blender(BKE_id_free_ex+0xe2) [0x55eff429e3a2] blender(BKE_main_free+0xa6) [0x55eff42ad9f6] blender(BKE_blender_free+0x72) [0x55eff425f5e2] blender(WM_exit_ex+0x498) [0x55eff44204c8] blender(WM_exit+0x15) [0x55eff44209e5] blender(main+0x35d) [0x55eff4223a8d] /usr/lib/libc.so.6(+0x2d310) [0x7fa2bd6a7310] /usr/lib/libc.so.6(__libc_start_main+0x81) [0x7fa2bd6a73c1] blender(_start+0x25) [0x55eff424f4a5] # Python backtrace ```
Author

Added subscriber: @jkjkjk

Added subscriber: @jkjkjk

#98740 was marked as duplicate of this issue

#98740 was marked as duplicate of this issue
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member
* thread #1, name = 'blender', stop reason = signal SIGSEGV: invalid address (fault address: 0x8)
  * frame #0: 0x000000001178eca4 blender`_PyDict_GetItem_KnownHash(op=0x0000000000000000, key=0x00007fffea382570, hash=4644447897854013358) at dictobject.c:1489:10
    frame #1: 0x000000001178ee51 blender`_PyDict_GetItemIdWithError(dp=<unavailable>, key=<unavailable>) at dictobject.c:1541:12 [artificial]
    frame #2: 0x0000000011771419 blender`_PyEval_BuiltinsFromGlobals(tstate=0x00007fffeb8ab300, globals=0x0000000000000000) at frameobject.c:1183:26
    frame #3: 0x0000000011850a52 blender`PyEval_EvalCode(co=0x00007fffe8e2dc60, globals=0x0000000000000000, locals=0x0000000000000000) at ceval.c:1120:26
    frame #4: 0x00000000118a0234 blender`run_mod at pythonrun.c:1291:9
    frame #5: 0x00000000118a01fb blender`run_mod(mod=0x00007fffe9088578, filename=0x00007fffea298e30, globals=0x0000000000000000, locals=0x0000000000000000, flags=0x0000000000000000, arena=0x00007fffe8e80150) at pythonrun.c:1312:19
    frame #6: 0x00000000118a19e5 blender`PyRun_StringFlags(str=<unavailable>, start=257, globals=0x0000000000000000, locals=0x0000000000000000, flags=0x0000000000000000) at pythonrun.c:1183:15
    frame #7: 0x000000000f7d2cc5 blender`MANTA::runPythonString(this=0x00007fffe4616000, commands=size=1) at MANTA_main.cpp:595:30
    frame #8: 0x000000000f7d302a blender`MANTA::~MANTA(this=0x00007fffe4616000) at MANTA_main.cpp:563:12
    frame #9: 0x000000000f7d3189 blender`MANTA::~MANTA(this=0x00007fffe4616000) at MANTA_main.cpp:544:1
    frame #10: 0x000000000f7b3768 blender`::manta_free(fluid=0x00007fffe4616000) at manta_fluid_API.cpp:20:3
    frame #11: 0x000000000320e5af blender`BKE_fluid_modifier_freeDomain(fmd=0x00007fffdee22008) at fluid.c:4713:7
    frame #12: 0x000000000320e555 blender`BKE_fluid_modifier_free(fmd=0x00007fffdee22008) at fluid.c:4820:3
    frame #13: 0x0000000003d3e05d blender`freeData(md=0x00007fffdee22008) at MOD_fluid.c:77:3
    frame #14: 0x00000000034a4425 blender`BKE_modifier_free_ex(md=0x00007fffdee22008, flag=2) at modifier.c:189:5
    frame #15: 0x00000000035204d9 blender`::BKE_object_free_modifiers(ob=0x00007fffe90b4c08, flag=2) at object.cc:1295:5
    frame #16: 0x000000000351da9b blender`object_free_data(id=0x00007fffe90b4c08) at object.cc:276:3
    frame #17: 0x00000000033f6b24 blender`BKE_libblock_free_datablock(id=0x00007fffe90b4c08, UNUSED_flag=0) at lib_id_delete.c:71:7
    frame #18: 0x0000000003b5a876 blender`blender::deg::deg_free_copy_on_write_datablock(id_cow=0x00007fffe90b4c08) at deg_eval_copy_on_write.cc:1022:3
    frame #19: 0x0000000003b70090 blender`blender::deg::IDNode::destroy(this=0x00007fffe91f2a08) at deg_node_id.cc:125:5
    frame #20: 0x0000000003b73814 blender`void blender::deg::clear_id_nodes_conditional<blender::deg::Depsgraph::clear_id_nodes()::$_1>(id_nodes=0x00007fffe90b31c0, filter=0x00007fffffffdf98)::$_1 const&) at depsgraph.cc:146:16
    frame #21: 0x0000000003b733a5 blender`blender::deg::Depsgraph::clear_id_nodes(this=0x00007fffe90b3108) at depsgraph.cc:157:3
    frame #22: 0x0000000003b73269 blender`blender::deg::Depsgraph::~Depsgraph(this=0x00007fffe90b3108) at depsgraph.cc:73:3
    frame #23: 0x0000000003b73d98 blender`::DEG_graph_free(graph=0x00007fffe90b3108) at depsgraph.cc:301:3
    frame #24: 0x00000000035bca3d blender`depsgraph_key_value_free(value=0x00007fffe90b3108) at scene.cc:3316:3
    frame #25: 0x0000000011213737 blender`ghash_free_cb(gh=0x00007ffff42e7c48, keyfreefp=(blender`depsgraph_key_free(void*) at scene.cc:3308), valfreefp=(blender`depsgraph_key_value_free(void*) at scene.cc:3314)) at BLI_ghash.c:630:9
    frame #26: 0x0000000011213832 blender`BLI_ghash_free(gh=0x00007ffff42e7c48, keyfreefp=(blender`depsgraph_key_free(void*) at scene.cc:3308), valfreefp=(blender`depsgraph_key_value_free(void*) at scene.cc:3314)) at BLI_ghash.c:867:5
    frame #27: 0x00000000035bc9d1 blender`::BKE_scene_free_depsgraph_hash(scene=0x00007fffeb82b008) at scene.cc:3337:3
    frame #28: 0x00000000035b572e blender`scene_free_data(id=0x00007fffeb82b008) at scene.cc:388:3
    frame #29: 0x00000000033f6b24 blender`BKE_libblock_free_datablock(id=0x00007fffeb82b008, UNUSED_flag=771) at lib_id_delete.c:71:7
    frame #30: 0x00000000033f6e36 blender`BKE_id_free_ex(bmain=0x00007fffeb71a808, idv=0x00007fffeb82b008, flag=771, use_flag_from_idtag=false) at lib_id_delete.c:130:3
    frame #31: 0x000000000341100a blender`BKE_main_free(mainvar=0x00007fffeb71a808) at main.c:60:7
    frame #32: 0x0000000003016d18 blender`BKE_blender_free at blender.c:65:3
    frame #33: 0x000000000376b1fc blender`WM_exit_ex(C=0x00007ffff3f85388, do_python=true) at wm_init_exit.c:547:3
    frame #34: 0x000000000376b3fa blender`WM_exit(C=0x00007ffff3f85388) at wm_init_exit.c:639:3
    frame #35: 0x0000000002f7a068 blender`main(argc=5, argv=0x00007fffffffe9a8) at creator.c:539:5
    frame #36: 0x00007ffff7dba290 libc.so.6`__libc_start_call_main + 128
    frame #37: 0x00007ffff7dba34a libc.so.6`__libc_start_main@@GLIBC_2.34 + 138
    frame #38: 0x0000000002f79ba5 blender`_start + 37
``` * thread #1, name = 'blender', stop reason = signal SIGSEGV: invalid address (fault address: 0x8) * frame #0: 0x000000001178eca4 blender`_PyDict_GetItem_KnownHash(op=0x0000000000000000, key=0x00007fffea382570, hash=4644447897854013358) at dictobject.c:1489:10 frame #1: 0x000000001178ee51 blender`_PyDict_GetItemIdWithError(dp=<unavailable>, key=<unavailable>) at dictobject.c:1541:12 [artificial] frame #2: 0x0000000011771419 blender`_PyEval_BuiltinsFromGlobals(tstate=0x00007fffeb8ab300, globals=0x0000000000000000) at frameobject.c:1183:26 frame #3: 0x0000000011850a52 blender`PyEval_EvalCode(co=0x00007fffe8e2dc60, globals=0x0000000000000000, locals=0x0000000000000000) at ceval.c:1120:26 frame #4: 0x00000000118a0234 blender`run_mod at pythonrun.c:1291:9 frame #5: 0x00000000118a01fb blender`run_mod(mod=0x00007fffe9088578, filename=0x00007fffea298e30, globals=0x0000000000000000, locals=0x0000000000000000, flags=0x0000000000000000, arena=0x00007fffe8e80150) at pythonrun.c:1312:19 frame #6: 0x00000000118a19e5 blender`PyRun_StringFlags(str=<unavailable>, start=257, globals=0x0000000000000000, locals=0x0000000000000000, flags=0x0000000000000000) at pythonrun.c:1183:15 frame #7: 0x000000000f7d2cc5 blender`MANTA::runPythonString(this=0x00007fffe4616000, commands=size=1) at MANTA_main.cpp:595:30 frame #8: 0x000000000f7d302a blender`MANTA::~MANTA(this=0x00007fffe4616000) at MANTA_main.cpp:563:12 frame #9: 0x000000000f7d3189 blender`MANTA::~MANTA(this=0x00007fffe4616000) at MANTA_main.cpp:544:1 frame #10: 0x000000000f7b3768 blender`::manta_free(fluid=0x00007fffe4616000) at manta_fluid_API.cpp:20:3 frame #11: 0x000000000320e5af blender`BKE_fluid_modifier_freeDomain(fmd=0x00007fffdee22008) at fluid.c:4713:7 frame #12: 0x000000000320e555 blender`BKE_fluid_modifier_free(fmd=0x00007fffdee22008) at fluid.c:4820:3 frame #13: 0x0000000003d3e05d blender`freeData(md=0x00007fffdee22008) at MOD_fluid.c:77:3 frame #14: 0x00000000034a4425 blender`BKE_modifier_free_ex(md=0x00007fffdee22008, flag=2) at modifier.c:189:5 frame #15: 0x00000000035204d9 blender`::BKE_object_free_modifiers(ob=0x00007fffe90b4c08, flag=2) at object.cc:1295:5 frame #16: 0x000000000351da9b blender`object_free_data(id=0x00007fffe90b4c08) at object.cc:276:3 frame #17: 0x00000000033f6b24 blender`BKE_libblock_free_datablock(id=0x00007fffe90b4c08, UNUSED_flag=0) at lib_id_delete.c:71:7 frame #18: 0x0000000003b5a876 blender`blender::deg::deg_free_copy_on_write_datablock(id_cow=0x00007fffe90b4c08) at deg_eval_copy_on_write.cc:1022:3 frame #19: 0x0000000003b70090 blender`blender::deg::IDNode::destroy(this=0x00007fffe91f2a08) at deg_node_id.cc:125:5 frame #20: 0x0000000003b73814 blender`void blender::deg::clear_id_nodes_conditional<blender::deg::Depsgraph::clear_id_nodes()::$_1>(id_nodes=0x00007fffe90b31c0, filter=0x00007fffffffdf98)::$_1 const&) at depsgraph.cc:146:16 frame #21: 0x0000000003b733a5 blender`blender::deg::Depsgraph::clear_id_nodes(this=0x00007fffe90b3108) at depsgraph.cc:157:3 frame #22: 0x0000000003b73269 blender`blender::deg::Depsgraph::~Depsgraph(this=0x00007fffe90b3108) at depsgraph.cc:73:3 frame #23: 0x0000000003b73d98 blender`::DEG_graph_free(graph=0x00007fffe90b3108) at depsgraph.cc:301:3 frame #24: 0x00000000035bca3d blender`depsgraph_key_value_free(value=0x00007fffe90b3108) at scene.cc:3316:3 frame #25: 0x0000000011213737 blender`ghash_free_cb(gh=0x00007ffff42e7c48, keyfreefp=(blender`depsgraph_key_free(void*) at scene.cc:3308), valfreefp=(blender`depsgraph_key_value_free(void*) at scene.cc:3314)) at BLI_ghash.c:630:9 frame #26: 0x0000000011213832 blender`BLI_ghash_free(gh=0x00007ffff42e7c48, keyfreefp=(blender`depsgraph_key_free(void*) at scene.cc:3308), valfreefp=(blender`depsgraph_key_value_free(void*) at scene.cc:3314)) at BLI_ghash.c:867:5 frame #27: 0x00000000035bc9d1 blender`::BKE_scene_free_depsgraph_hash(scene=0x00007fffeb82b008) at scene.cc:3337:3 frame #28: 0x00000000035b572e blender`scene_free_data(id=0x00007fffeb82b008) at scene.cc:388:3 frame #29: 0x00000000033f6b24 blender`BKE_libblock_free_datablock(id=0x00007fffeb82b008, UNUSED_flag=771) at lib_id_delete.c:71:7 frame #30: 0x00000000033f6e36 blender`BKE_id_free_ex(bmain=0x00007fffeb71a808, idv=0x00007fffeb82b008, flag=771, use_flag_from_idtag=false) at lib_id_delete.c:130:3 frame #31: 0x000000000341100a blender`BKE_main_free(mainvar=0x00007fffeb71a808) at main.c:60:7 frame #32: 0x0000000003016d18 blender`BKE_blender_free at blender.c:65:3 frame #33: 0x000000000376b1fc blender`WM_exit_ex(C=0x00007ffff3f85388, do_python=true) at wm_init_exit.c:547:3 frame #34: 0x000000000376b3fa blender`WM_exit(C=0x00007ffff3f85388) at wm_init_exit.c:639:3 frame #35: 0x0000000002f7a068 blender`main(argc=5, argv=0x00007fffffffe9a8) at creator.c:539:5 frame #36: 0x00007ffff7dba290 libc.so.6`__libc_start_call_main + 128 frame #37: 0x00007ffff7dba34a libc.so.6`__libc_start_main@@GLIBC_2.34 + 138 frame #38: 0x0000000002f79ba5 blender`_start + 37 ```
Author

This comment was removed by @jkjkjk

*This comment was removed by @jkjkjk*
Sonny Campbell self-assigned this 2022-06-14 16:46:17 +02:00
Added subscribers: @MarcM0, @SonnyCampbell_Unity, @lichtwerk, @mano-wii
Member

Looks to be linked to the fix for this task https://developer.blender.org/T75889

Looks to be linked to the fix for this task https://developer.blender.org/T75889

This issue was referenced by ad8add5f0c

This issue was referenced by ad8add5f0cbe1b5abb85a6cf510e52b66de273e9

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Hey, I was wondering how long it would usually take for these commits to make it into the release?

Hey, I was wondering how long it would usually take for these commits to make it into the release?
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

In #98427#1380119, @MarcM0 wrote:
Hey, I was wondering how long it would usually take for these commits to make it into the release?

Hi, fix has been committed to master so you can expect this in 3.3 release
But you can even check this today in fresh 3.3-alpha build: https://builder.blender.org/download/daily/

> In #98427#1380119, @MarcM0 wrote: > Hey, I was wondering how long it would usually take for these commits to make it into the release? Hi, fix has been committed to master so you can expect this in [3.3 release ](https://developer.blender.org/project/view/142/) But you can even check this today in fresh 3.3-alpha build: https://builder.blender.org/download/daily/

Alright, thank you!

Alright, thank you!

This comment was removed by @MarcM0

*This comment was removed by @MarcM0*
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98427
No description provided.